PMD appeased
Some warnings have been supressed.